# YokaiOS

./: .gitignore  LICENSE  Revi-PB-26.04.apbx  YokaiOS-v1.0.0.apbx  YokaiOS-v1.1.0.apbx  YokaiOS-v2.0.0.apbx  release-notes.md  test-toolbox.ps1
.github/workflows/: build.yml
YokaiOS/: PROJECT_STATUS.md  README.md  playbook.conf
YokaiOS-Toolbox/: Build.ps1  README.md  YokaiOS-Toolbox.sln
YokaiOS-Toolbox-Tauri/: index.html  package.json  vite.config.ts
YokaiOS-Toolbox-Tauri/src/: main.ts
YokaiOS-Toolbox-Tauri/src-tauri/: Cargo.toml  app.manifest
YokaiOS-Toolbox-Tauri/src-tauri/src/: main.rs
YokaiOS-Toolbox-Tauri/src/styles/: global.css
YokaiOS-Toolbox/YokaiOS-Toolbox/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  YokaiOS-Toolbox.csproj  app.manifest
YokaiOS-Toolbox/YokaiOS-Toolbox/Helpers/: TweakHelper.cs
YokaiOS-Toolbox/YokaiOS-Toolbox/Pages/: BenchmarkPage.xaml  BenchmarkPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  DebloatPage.xaml  DebloatPage.xaml.cs  GamingPage.xaml  GamingPage.xaml.cs  NetworkPage.xaml  NetworkPage.xaml.cs  PerformancePage.xaml  PerformancePage.xaml.cs  PrivacyPage.xaml  PrivacyPage.xaml.cs  RestorePage.xaml  RestorePage.xaml.cs  ServicesPage.xaml  ServicesPage.xaml.cs
YokaiOS/Configuration/: custom.yml  tweaks.yml
YokaiOS/Configuration/tweaks/: software.yml  (+1 more)
YokaiOS/Executables/: Benchmark.ps1  Build-Playbook.ps1  Download-Toolbox.ps1  Download-Win11ISO.ps1  Install-Toolbox.ps1  Install-YokaiOS.ps1  Install.bat  Setup-VM.ps1  System-Status.ps1  Verify-Installation.ps1  YokaiOS-Toolbox.ps1
(+56 files in other folders)
